--- a/smartpos-view/package.json
+++ b/smartpos-view/package.json
@@ -12,6 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~7.2.0",
+    "@angular/cdk": "^7.3.7",
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
@@ -23,6 +24,7 @@
     "core-js": "^2.5.4",
     "foundation-sites": "^6.5.3",
     "ngx-foundation": "^1.0.8",
+    "primeng": "^7.1.2",
     "rxjs": "~6.3.3",
     "rxjs-compat": "^6.5.2",
     "tslib": "^1.9.0",
