--- a/smartpos-view/package.json
+++ b/smartpos-view/package.json
@@ -21,7 +21,10 @@
     "@angular/platform-browser-dynamic": "^7.2.15",
     "@angular/router": "^7.2.15",
     "angular-web-storage": "^7.0.0-beta.1",
+    "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
+    "font-awesome": "^4.7.0",
+    "foundation-apps": "^1.2.0",
     "foundation-sites": "^6.5.3",
     "ngx-foundation": "^1.0.8",
     "primeng": "^7.1.2",
